information for vm option